--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
-    "nuxt": "^3.7.3"
+    "nuxt": "^3.0.0"
+  },
+  "dependencies": {
+    "@nuxtjs/tailwindcss": "^6.1.3"
   }
 }
